# ganglion

./: .gitignore  CLAUDE.md  LICENSE  QWEN.md  README.md  overview.md  pyproject.toml
docs/: bfcl_flash_replay_report.md  bfcl_m1_m4_result_report.md  bfcl_m5_abstention_report.md  bfcl_replay_report.md  branding.md  factory_phase1_report.md  factory_phase2_plan.md  m4_repair_loop_report.md  poc_verification_report.md  research_vision_for_review.md  tool_schema_compiler.md
examples/iot_light/: adversarial_cases.jsonl  adversarial_cases.py  dataset.jsonl  generate_dataset.py  merged_dataset.jsonl
ganglion/: __init__.py
ganglion/bfcl/: __init__.py  grader.py  loader.py
ganglion/dsl/: __init__.py  catalog.py  compiler.py  emitter.py  json_extract.py  tool_spec.py  validator.py
ganglion/eval/: __init__.py  bfcl_runner.py  dataset.py  metrics.py  runner.py  scaling.py
ganglion/factory/: __init__.py
ganglion/runtime/: __init__.py  executor.py  qwen.py  rules.py  types.py
ganglion/schema/: __init__.py  home_iot.py  iot_light.py  smart_home.py
rlm_poc/: __init__.py
rlm_poc/dsl/: __init__.py  catalog.py  emitter.py  json_extract.py  tool_spec.py  types.py  validator.py
rlm_poc/eval/: dataset.py  metrics.py  runner.py  scaling.py
rlm_poc/runtime/: executor.py  qwen.py  rules.py  types.py
rlm_poc/schema/: __init__.py  home_iot.py  iot_light.py  smart_home.py
runs/: aggregate.py  m2_run.sh  m3_run.sh  m4_run.sh
tests/: test_bfcl_grader.py  test_bfcl_loader.py  test_bfcl_runner.py  test_bfcl_smoke.py  test_catalog_tiers.py  test_compiler_bfcl_features.py  test_dataset_integrity.py  test_eval_runner.py  test_json_extract.py  test_number_arg.py  test_repair_loop.py  test_tool_schema_compiler.py  test_validator.py
(+111 files in other folders)
