[project]
name = "ganglion"
version = "0.1.0"
description = "Ganglion — spinal tool calling for LLMs. POC converting compact JSON DSL outputs into deterministic tool calls."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["ganglion*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
