[project]
name = "toolcallopt"
version = "0.1.0"
description = "ToolCallOpt: compiler-guided optimization for LLM tool calling via compact Action IRs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["ganglion*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
